--- a/composables/build.gradle
+++ b/composables/build.gradle
@@ -16,7 +16,13 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
+    buildFeatures{
+        compose true
+    }
+
+
     buildTypes {
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -26,13 +32,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.1"
+    }
     kotlinOptions {
         jvmTarget = '1.8'
     }
 }
 
 dependencies {
-
+    implementation(libs.androidx.material.icons.extended)
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
@@ -57,7 +66,7 @@ afterEvaluate {
 
                 groupId = 'com.github.Capiro-Dev'
                 artifactId = 'composables'
-                version = '1.0.0'
+                version = '1.0.1'
             }
         }
     }
