--- a/composables/build.gradle
+++ b/composables/build.gradle
@@ -41,6 +41,9 @@ android {
 }
 
 dependencies {
+    implementation platform(libs.androidx.compose.bom)
+    implementation libs.androidx.activity.compose
+
     implementation(libs.androidx.material.icons.extended)
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
@@ -55,6 +58,11 @@ dependencies {
     implementation libs.androidx.ui.graphics
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.material3
+
+    debugImplementation libs.androidx.ui.tooling
+    debugImplementation libs.androidx.ui.test.manifest
+
+
 
 }
 
