--- a/composables/build.gradle
+++ b/composables/build.gradle
@@ -29,14 +29,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     composeOptions {
         kotlinCompilerExtensionVersion = "1.5.1"
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
 }
 
@@ -75,7 +75,7 @@ afterEvaluate {
                 groupId = 'com.github.Capiro-Dev'
                 artifactId = 'composables'
 
-                version = '1.1.9'
+                version = '1.1.10'
             }
         }
     }
